css colors and background

--- a/index.html
+++ b/index.html
@@ -4,10 +4,189 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css class</title>
+
+    <style>
+
+        .cats {
+
+            color: rgba(0,0,0,1) !important;
+
+            background: rgba(255,255,255,1) url("image.png") no-repeat right top;
+            background-attachment: fixed;
+            
+        }
+
+
+    </style>
 </head>
 <body>
 
-    <h1>Hello World</h1>
+    <h1 style="color:rgba(0,0,255,1)"> Title </h1>
+
+    <p class="cats">typesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsum
+        typesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s wtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s wtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumtypesetting industry. Lorem Ipsum has been 
+        the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled 
+        it to make a type specimen book.  It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essen
+        tially unchanged. It was popularised in the 1960s with 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumith 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsumith 
+        the release of Letraset sheets containing Lorem Ipsum pass
+        ages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsum
+    </p>
     
 </body>
 </html>
+
